# groove-cli

./: .gitignore  2812.yaml  AGENTS.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml  log.txt  log.txtclear  song  song.toml  song.yaml
.github/workflows/: release.yml
deluge-community-preset-pack-1.2-main/: README.md
documentation/development/: DEVELOPMENT.md  STATUS.md  ideas.md
documentation/development/features/: cli-ui-gallery.md  full-spec.md  live-playing-view.md  pattern-playback-roadmap.md  repl-commands.md  sample-autocomplete.md  to-implement.md
documentation/features/: cli-ui-gallery.md  full-spec.md  pattern-notation.md  repl-commands.md  sample-autocomplete.md  to-implement.md  toml-schema.md  tui-design.md
documentation/user-guide/: commands.md  pattern-notation.md  quickstart.md
songs/: 2712.yaml  2812.yaml  a_classic_rock.yaml  song.yaml
src/: audio.rs  console.rs  lib.rs  main.rs
src/ai/: mod.rs
src/audio/: compile.rs  effects.rs  pitch.rs  timing.rs
src/model/: fx.rs  mod.rs  pattern.rs  song.rs  track.rs
src/pattern/: mod.rs  scripted.rs  visual.rs
src/pattern/visual/: mod.rs  parser.rs  types.rs
src/repl/: browser.rs  completer.rs  mod.rs  style.rs
src/storage/: mod.rs  song.rs
src/tui/: input.rs  mod.rs  widgets.rs
tests/: pattern_sustain.rs  song_toml_roundtrip.rs  song_yaml_roundtrip.rs  visual_pattern.rs
tests/fixtures/: sustain.yaml
