[package]
name = "groove-cli"
version = "0.1.0"
edition = "2021"
description = "CLI-based REPL groovebox (scaffold)"
license = "MIT"

[dependencies]
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
rustyline = "12"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
shlex = "1.3"
rodio = { version = "0.17", default-features = false, features = ["mp3", "wav"] }
notify = { version = "6", default-features = false, features = ["macos_fsevent", "serde"] }
once_cell = "1"
rhai = "1.17"
reqwest = { version = "0.12", features = ["json", "blocking"] }  # For AI API calls

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
