[package]
name = "groove-cli"
version = "0.1.0"
edition = "2021"
description = "A command-line groovebox with a powerful REPL for building patterns and playing samples"
license = "MIT"
repository = "https://github.com/m0nkmaster/groove-cli"
homepage = "https://github.com/m0nkmaster/groove-cli"
readme = "README.md"
keywords = ["music", "audio", "cli", "sequencer", "groovebox"]
categories = ["multimedia::audio", "command-line-utilities"]

[dependencies]
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
rustyline = "12"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
shlex = "1.3"
rodio = { version = "0.17", default-features = false, features = ["mp3", "wav"] }
crossterm = "0.27"
notify = { version = "6", default-features = false, features = ["macos_fsevent", "serde"] }
once_cell = "1"
rhai = "1.17"
reqwest = { version = "0.12", features = ["json", "blocking"] }  # For AI API calls
dotenvy = "0.15"  # For loading .env files

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
